<resources>
    <string name="app_name">KiddoDelivery</string>
    <string name="Password">Contraseña</string>
    <string name="Email">Email</string>
    <string name="Login">Login</string>
    <string name="AunCuenta">¿Aún no tienes una cuenta? Regístrate!</string>
    <string name="Registrarse">Registrarse</string>
    <string name="RegistroGoogle">Pulse para registrar su cuenta con Google</string>
    <string name="RegistroFacebook">Pulse para registrar su cuenta con Facebook</string>
    <string name="RegistroTwitter">Pulse para registrar su cuenta con Twitter</string>
    <string name="IntroduceDatos">Introduce tus datos:</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellidos">Apellidos</string>
    <string name="DNI">DNI</string>
    <string name="Tlf">Teléfono</string>
    <string name="Calle">Calle y número / portal / piso</string>
    <string name="RepetirPassword">Repetir Contraseña</string>
    <string name="Poblacion">Población</string>
    <string name="Reset_password">He olvidado mi contraseña</string>
    <string name="Reset_password_activity">Resetear contraseña</string>
    <string name="Padres_confianza">Padres de confianza</string>
    <string name="Cerrar_sesion">Cerrar Sesión</string>
    <string name="Notificaciones">Notificaciones</string>
    <string name="Darse_baja">Darse de baja</string>
    <string name="Añadir_padres">Añadir padres de confianza</string>
    <string name="Ver_padres">Ver padres de confianza</string>
    <string name="Hijos">Hijos</string>
    <string name="Cuenta">Mi cuenta</string>
    <string name="Añadir">Añadir</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Nombre_hijos">¿Cómo se llaman tus hijos?</string>
    <string name="Eventos">Eventos</string>
    <string name="TituloEvento">Título del Evento</string>
    <string name="Direccion">Dirección</string>
    <string name="HoraInicio">Hora de inicio</string>
    <string name="HoraFin">Hora de fin</string>
    <string name="AvisarPC">Avisar a padres confianza</string>
    <string name="NuevoEvento">Nuevo Evento</string>
    <string name="CrearEvento">Crear Evento</string>
    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>


</resources>